--- a/package.json
+++ b/package.json
@@ -1,32 +1,35 @@
 {
   "name": "myrecipefinder",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.4"
+    "@tailwindcss/vite": "^4.1.14",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.6.0",
+    "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@tailwindcss/postcss": "^4.1.14",
-    "@types/react": "^19.1.16", 
-    "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.22",
-    "globals": "^16.4.0",
-    "postcss": "^8.5.6",
-    "tailwindcss":"^4.1.14",
-    "vite": "^7.1.7"
-  }
+    "vite": "^7.1.0"
+  },
+  "description": "A fully functional Recipe Finder web application built as part of the ALX Fullstack Capstone Project. Users can search meals, explore categories, and view detailed recipes from the TheMealDB API.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Faith043888/alx-capstone-project.git"
+  },
+  "license": "ISC",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/Faith043888/alx-capstone-project/issues"
+  },
+  "homepage": "https://github.com/Faith043888/alx-capstone-project#readme"
 }
